feat: 工厂模式优化